--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <html>
 
  <head>
-   <title>Emotion To Emoji</title>
+   <title>Gesture Recognizer</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -95,7 +95,7 @@
         <div
           style="padding: 30px; font-size: 30px; color: white; height: 20%; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; background-color:#33425B;">
           SnapShot</div>
-          <div id="camera"></div>
+          <div id="result"></div>
           <div id="check" onclick="check()" >Predict Gesture</div>
       </div>
 
